--- a/data/applicants.json
+++ b/data/applicants.json
@@ -1,5 +1,6 @@
 [
   {
+    "id": "e7f9699b-07a4-4779-8a50-8766df17a6c7",
     "fullName": "Test Hacker",
     "email": "test@gmail.com",
     "phone": "9123456780",
@@ -9,9 +10,8 @@
     "portfolioUrl": "",
     "githubUrl": "https://9000-firebase-studio-1749466999761.cluster-73qgvk7hjjadkrjeyexca5ivva.cloudworkstations.dev/admin/dashboard/blogs",
     "linkedinUrl": "https://9000-firebase-studio-1749466999761.cluster-73qgvk7hjjadkrjeyexca5ivva.cloudworkstations.dev/admin/dashboard/blogs",
-    "id": "e7f9699b-07a4-4779-8a50-8766df17a6c7",
-    "status": "Pending",
+    "status": "Reviewed",
     "appliedAt": "2025-06-09T19:09:50.094Z",
-    "notes": null
+    "notes": ""
   }
 ]
