in the Company page separate the Our Team section, and shows the Team me

--- a/data/applicants.json
+++ b/data/applicants.json
@@ -10,7 +10,7 @@
     "portfolioUrl": "",
     "githubUrl": "https://9000-firebase-studio-1749466999761.cluster-73qgvk7hjjadkrjeyexca5ivva.cloudworkstations.dev/admin/dashboard/blogs",
     "linkedinUrl": "https://9000-firebase-studio-1749466999761.cluster-73qgvk7hjjadkrjeyexca5ivva.cloudworkstations.dev/admin/dashboard/blogs",
-    "status": "Reviewed",
+    "status": "Hired",
     "appliedAt": "2025-06-09T19:09:50.094Z",
     "notes": ""
   }
